feat udistrital/arka_cliente#1160: Transacciones identificación
- Filtro transacción vinculación-identificación
- Permite filtrar por tipos de vinculación, cargos y dependencias.
